Add test 'set deadline' to tasks, refactor controllers
