# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2020_08_13_102237) do
+ActiveRecord::Schema.define(version: 2020_08_24_223152) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -59,7 +59,7 @@ ActiveRecord::Schema.define(version: 2020_08_13_102237) do
   create_table "tasks", force: :cascade do |t|
     t.text "name"
     t.boolean "complited", default: false
-    t.date "deadline"
+    t.datetime "deadline"
     t.bigint "project_id"
     t.bigint "user_id"
     t.datetime "created_at", precision: 6, null: false
